Fix newly introduced flake in ExtensionPreferenceApiTest.Standard

BUG=614552

Review-Url: https://codereview.chromium.org/2030803002
Cr-Commit-Position: refs/heads/master@{#398997}

Former-commit-id: 954b89348444571c3b369fc0e2fe98619b9c64c1